--- a/SalesForce/SalesForce.csproj
+++ b/SalesForce/SalesForce.csproj
@@ -42,8 +42,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="nunit.framework, Version=3.6.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.6.1\lib\net45\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=3.7.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.7.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="SpecFlow.Assist.Dynamic, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
@@ -117,6 +117,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SFCreateACase.feature</DependentUpon>
     </Compile>
+    <Compile Include="TestSteps\SFCreateOrganisationSteps.cs" />
     <Compile Include="TestSteps\SFLoginOut.cs" />
     <Compile Include="TestSteps\SFLogInSteps.cs" />
     <Compile Include="TestSteps\SFLogoutSteps.cs" />
