--- a/SalesForce/SalesForce.csproj
+++ b/SalesForce/SalesForce.csproj
@@ -83,13 +83,21 @@
     <Compile Include="Pages\ArticleManagementPage.cs" />
     <Compile Include="Pages\BasePage.cs" />
     <Compile Include="Pages\CaseEditPage.cs" />
+    <Compile Include="Pages\CaseMassDeletePage.cs" />
     <Compile Include="Pages\CaseNewPage.cs" />
     <Compile Include="Pages\CasePage.cs" />
     <Compile Include="Pages\CaseRecordPage.cs" />
+    <Compile Include="Pages\CategoriesEditPage.cs" />
+    <Compile Include="Pages\CategoriesPage.cs" />
+    <Compile Include="Pages\CategoriesRecordPage.cs" />
     <Compile Include="Pages\ChatterPage.cs" />
+    <Compile Include="Pages\ContactsEditPage.cs" />
+    <Compile Include="Pages\ContactsMassDeletePage.cs" />
     <Compile Include="Pages\ContactsPage.cs" />
+    <Compile Include="Pages\ContactsRecordPage.cs" />
     <Compile Include="Pages\ContractsPage.cs" />
     <Compile Include="Pages\FrameworksPage.cs" />
+    <Compile Include="Pages\OrganisationMassDeletePage.cs" />
     <Compile Include="Pages\OrganisationRecordPage.cs" />
     <Compile Include="Pages\KnowledgePage.cs" />
     <Compile Include="Pages\LandingPage.cs" />
@@ -142,6 +150,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="TestFeature\LoginAsDifferentUser.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LoginAsDifferentUser.feature</DependentUpon>
+    </Compile>
     <Compile Include="TestFeature\Logout.feature.cs">
       <DependentUpon>Logout.feature</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -162,6 +175,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SurveyFeedbackObject.feature</DependentUpon>
     </Compile>
+    <Compile Include="TestFeature\TS.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TS.feature</DependentUpon>
+    </Compile>
     <Compile Include="TestFeature\UserNavigation.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -173,11 +191,13 @@
     <Compile Include="TestSteps\CreateOrganisationSteps.cs" />
     <Compile Include="TestSteps\DeleteTestDataSteps.cs" />
     <Compile Include="TestSteps\EmailTemplateSteps.cs" />
+    <Compile Include="TestSteps\LoginAsDifferentUserSteps.cs" />
     <Compile Include="TestSteps\LogInSteps.cs" />
     <Compile Include="TestSteps\LogoutSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestSteps\RecentCasesSteps.cs" />
     <Compile Include="TestSteps\SurveyFeedbackObjectSteps.cs" />
+    <Compile Include="TestSteps\TSSteps.cs" />
     <Compile Include="TestSteps\UserNavigationSteps.cs" />
     <Compile Include="Utilities\HandleTableData.cs" />
   </ItemGroup>
@@ -217,6 +237,10 @@
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Login.feature.cs</LastGenOutput>
     </None>
+    <None Include="TestFeature\LoginAsDifferentUser.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>LoginAsDifferentUser.feature.cs</LastGenOutput>
+    </None>
     <None Include="TestFeature\Logout.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Logout.feature.cs</LastGenOutput>
@@ -232,6 +256,10 @@
     <None Include="TestFeature\SurveyFeedbackObject.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>SurveyFeedbackObject.feature.cs</LastGenOutput>
+    </None>
+    <None Include="TestFeature\TS.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>TS.feature.cs</LastGenOutput>
     </None>
     <None Include="TestFeature\UserNavigation.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
