--- a/SalesForce/SalesForce.csproj
+++ b/SalesForce/SalesForce.csproj
@@ -108,7 +108,9 @@
     <Compile Include="Pages\ProfileHomePage.cs" />
     <Compile Include="Pages\ReportsPage.cs" />
     <Compile Include="Pages\SearchResultPage.cs" />
-    <Compile Include="Pages\SetUpPage.cs" />
+    <Compile Include="Pages\SFAdminSetUpPage.cs" />
+    <Compile Include="Pages\TriageLevelsRecordPage.cs" />
+    <Compile Include="Pages\TriageLevelsEditPage.cs" />
     <Compile Include="Pages\TriageLevelsPage.cs" />
     <Compile Include="TestFeature\ChatterPost.feature.cs">
       <AutoGen>True</AutoGen>
